Side nav wrap issue commented out overflow-y:auto

--- a/assets/main.css
+++ b/assets/main.css
@@ -292,7 +292,7 @@ h4 {
 }
 
 .navitems {
-	overflow-y: auto;
+	/*overflow-y: auto;*/
 	top: 0;
 	bottom: 0;
 	height: 125%;
